Assignment2/frontend/src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');

/* All Pages */
body {
    margin: 0; /* Remove default body margin */
    padding: 0; /* Remove default body padding */
    font-family: 'Kanit', sans-serif;
    overflow: hidden;
  }


/* Home Page */
.home-background {
    background: linear-gradient(to bottom, #1A936F, #76C991); 
    height: 100vh; /* Set height to 100% of the viewport height */

}

.Home {
    color: #F3E9D2;
    text-align: center;
}

.home-button {
    border-radius: 60px;
    border: 2px solid #114B5F;
    color: #F3E9D2;
    box-shadow: 0px 3px 4px rgba(0,0,0,.25);
}


/* Contributions Page */
.contributions-background {
    background: linear-gradient(to bottom, #88D498, #F3E9D2); 
    height: 100vh; /* Set height to 100% of the viewport height */
}

.Contributions {
    color: #114B5F;
    text-align: center;
}

.extrabold-heading {
    font-weight: 1000;
}

/* Login Page */
.login-background {
    background: linear-gradient(to bottom, #C6DABF, #88D498); 
    height: 100vh;
}

.Login {
    color: #000000;
}


/* Setup Page */
.setup-background {
    background: linear-gradient(to bottom, #88D498, #114B5F); 
    height: 100vh;
}

/* Settings */
.settings-background {
    background-color: #1A936F;
    height: 100vh;
}

.Settings {
    color: #FFFFFF;
    text-align: center;
}

.dark-mode {
    background-color: #333;
    color: #fff;
}

.dark-button {
    background-color: #333;
    border-color: #333;
}

/* Navbar */
.navbar.navbar-expand-lg {
    background-color: #13785A;
    display: flex;
}

.navbar-brand {
    color: #F3E9D2;
}

/* cards */
.card-body {
    background-color: #F3E9D2;
}

/* img */
.img-fluid {
    margin: 0 auto; /* This will horizontally center the image */
    display: block; /* This ensures the margin property works correctly */
}

/* button */
.btn.btn-primary {
    background-color: #1A936F;
    
}

.mb-6 {
    margin-bottom: 1 !important;
}

